changed color scheme

--- a/index.html
+++ b/index.html
@@ -1,79 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="index.css" class="rel">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-		<link href='https://fonts.googleapis.com/css?family=Enriqueta:400,700' rel='stylesheet' type='text/css'>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-			<!--////////// Nav bar /////////////-->
+<head>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="index.css" class="rel">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link href='https://fontsg.googleapis.com/css?family=Enriqueta:400,700' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--////////// Nav bar /////////////-->
 </head>
 
-<body>			
-<!--Header Image Below -->
-<div class="banner">
-		<img src="img/Name_Is_Banner.png" class="img-responsive" alt="header">
-</div>
-
-<div class="container-fluid">
-<!-- /////// THUMBNAILS ////// -->
- 	<div class="row">
-  		<div class="col-xs-6 col-md-3">
-    			<a href="About.html">
-      		  <div class="button hvr-float-shadow">
-          <img src="img/bio.png" alt="Kristen" class="img-responsive" width="387" height="275">
-    	</div>
-        </a>
+<body>
+    <!--Header Image Below -->
+    <div class="banner">
+        <img src="img/pentagon2.png" class="img-responsive" alt="header">
+    </div>
+    <div class="container-fluid">
+        <!-- /////// THUMBNAILS ////// -->
+        <div class="row">
+            <div class="col-xs-6 col-md-3">
+                <a href="About.html">
+                    <div class="button hvr-float-shadow">
+                        <img src="img/bio.png" alt="Kristen" class="img-responsive" width="387" height="275">
+                    </div>
+                </a>
             </div>
-      <div class="col-xs-6 col-md-3">
-        <a href="Portfolio.html">
-            <div class="button hvr-float-shadow">
-          <img src="img/portfolio.png" alt="Programming" class="img-responsive" width="387" height="275">
+            <div class="col-xs-6 col-md-3">
+                <a href="Portfolio.html">
+                    <div class="button hvr-float-shadow">
+                        <img src="img/portfolio.png" alt="Programming" class="img-responsive" width="387" height="275">
+                    </div>
+                </a>
             </div>
-        </a>
-      </div>
-  		<div class="col-xs-6 col-md-3">
-    		<a href="Blog.html">
-            <div class="button hvr-float-shadow">
-      		<img src="img/blog.png" alt="Journal" class="img-responsive" width="387" height="275">
+            <div class="col-xs-6 col-md-3">
+                <a href="Blog.html">
+                    <div class="button hvr-float-shadow">
+                        <img src="img/blog.png" alt="Journal" class="img-responsive" width="387" height="275">
+                    </div>
+                </a>
             </div>
-        </a>
-    	</div>
-    	<div class="col-xs-6 col-md-3">
-    		<a href="https://github.com/KristenLeake">
-            <div class="button hvr-float-shadow">
-      		<img src="img/github.png" alt="Github" class="img-responsive" width="387" height="275">
-    	</div>
-        </a>
+            <div class="col-xs-6 col-md-3">
+                <a href="https://github.com/KristenLeake">
+                    <div class="button hvr-float-shadow">
+                        <img src="img/github.png" alt="Github" class="img-responsive" width="387" height="275">
+                    </div>
+                </a>
             </div>
-</div>
-</div>
-</div>
-<!-- ////////   THUMBNAILS END ////// -->
-	
-		</body>
-    <footer>
-        <p>© Kristen Leake Creative, LLC 2016
-  <ul>
-    <li><a href="#home">Home</li></a>
-    <li><a href="About.html">About</a></li>
-    <li><a href="#portfolio">Portfolio</a></li>
-    <li><a href="#blog">Blog</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-
-<!-- ///// Social Media Links ///// -->
-  <div class="footer-social-icons">
-                <h4 class="_14">Follow me on</h4>
-                <ul class="social-icons">
-                  <li><a href="https://www.facebook.com/kristen.leake.5" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-                  <li><a href="https://twitter.com/Kristen_Leake" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-                  <li><a href="https://www.youtube.com/channel/UCa7Jny01FDsAD5M2zid1znw" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
-                  <li><a href="https://www.linkedin.com/in/kristennleake"> <i class="fa fa-linkedin"></i></a></li>
-                </ul>
-              </div>
-<!-- ///// Social Media Links End ////// -->
+        </div>
+    </div>
+    </div>
+    <!-- ////////   THUMBNAILS END ////// -->
+</body>
+<footer>
+    <p>© Kristen Leake Creative, LLC 2016
+        <ul>
+            <li><a href="#home">Home</li></a>
+                <li><a href="About.html">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
+        </ul>
+        <!-- ///// Social Media Links ///// -->
+        <div class="footer-social-icons">
+            <h4 class="_14">Follow me on</h4>
+            <ul class="social-icons">
+                <li>
+                    <a href="https://www.facebook.com/kristen.leake.5" class="social-icon"> <i class="fa fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/Kristen_Leake" class="social-icon"> <i class="fa fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UCa7Jny01FDsAD5M2zid1znw" class="social-icon"> <i class="fa fa-youtube"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/kristennleake"> <i class="fa fa-linkedin"></i></a>
+                </li>
+            </ul>
+        </div>
+        <!-- ///// Social Media Links End ////// -->
 </footer>
+
 </html>
