added sass styling and linked tall pages

--- a/index.html
+++ b/index.html
@@ -12,31 +12,30 @@
 </head>
 
 <body>
-    <!--////////// Nav bar /////////////-->
+<div id="home">
+<!--////////// Nav bar /////////////-->
     <div class="collapse navbar-collapse" id=bs-example-collapse-navbar1>
         <ul>
             <li><a href="#home">Home</li></a>
                 <li><a href="template/about.html">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="template/portfolio.html">Portfolio</a></li>
                 <li><a href="template/blog.html">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <!--               <div class="footer-social-icons"> -->
-                <!-- <ul class="social-icons"> -->
-                <li>
-                    <a href="https://twitter.com/Kristen_Leake" class="social-icon"> <i class="fa fa-twitter"></i></a>
-                </li>
-                <li>
-                    <a href="https://www.youtube.com/channel/UCa7Jny01FDsAD5M2zid1znw" class="social-icon"> <i class="fa fa-youtube"></i></a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/kristennleake" class="social-icon"> <i class="fa fa-linkedin"></i></a>
-                </li>
-        </ul>
-    </div>
+                    <!-- <ul class="social-icons"> -->
+                    <li>
+                        <a href="https://twitter.com/Kristen_Leake" class="social-icon"> <i class="fa fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/channel/UCa7Jny01FDsAD5M2zid1znw" class="social-icon"> <i class="fa fa-youtube"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/kristennleake" class="social-icon"> <i class="fa fa-linkedin"></i></a>
+                    </li>
+        <!-- </ul> -->
     </div>
     <!--////////// Nav bar ends /////////////-->
     <div class="banner">
-        <img src="img/pentagon3.png" class="img-responsive" alt="header">
+        <img src="./img/pentagon3.png" class="img-responsive" alt="header">
     </div>
     <!-- <h1 class="title">Hey, my name is Kristen Leake</h1>
     <p>I build websites & apps</p> -->
@@ -45,21 +44,21 @@
             <!-- /////// THUMBNAILS ////// -->
             <div class="row">
                 <div class="col-xs-6 col-md-3">
-                    <a href="About.html">
+                    <a href="template/about.html">
                         <div class="button hvr-float-shadow">
                             <img src="img/bio.png" alt="Kristen" class="img-responsive" width="387" height="275">
                         </div>
                     </a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                    <a href="Portfolio.html">
+                    <a href="template/portfolio.html">
                         <div class="button hvr-float-shadow">
                             <img src="img/portfolio.png" alt="Programming" class="img-responsive" width="387" height="275">
                         </div>
                     </a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                    <a href="Blog.html">
+                    <a href="template/blog.html">
                         <div class="button hvr-float-shadow">
                             <img src="img/blog.png" alt="Journal" class="img-responsive" width="387" height="275">
                         </div>
@@ -75,36 +74,7 @@
             </div>
         </div>
     </section>
-    <!-- ////////   THUMBNAILS END ////// -->
-    <!--     <footer>
-        <p>© Kristen Leake Creative, LLC 2016
-            <ul>
-                <li><a href="#home">Home</li></a>
-                    <li><a href="About.html">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#blog">Blog</a></li>
-                    <li><a href="#contact">Contact</a></li>
-            </ul>
-            <!- ///// Social Media Links ///// -->
-    <!-- <div class="footer-social-icons">
-                <h4 class="_14">Follow me on</h4>
-                <div class="icons">
-                    <ul class="social-icons">
-                
-                        <li>
-                            <a href="https://twitter.com/Kristen_Leake" class="social-icon"> <i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.youtube.com/channel/UCa7Jny01FDsAD5M2zid1znw" class="social-icon"> <i class="fa fa-youtube"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/kristennleake"> <i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div> -->
-    <!-- ///// Social Media Links End ////// -->
-    <!--  </footer> -->
-</body>
+    <!-- ////////   THUMBNAILS END ////// --></div>
+    </body>
 
 </html>
