--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="css/index.css" class="rel">
+    <link rel="stylesheet" href="scss/partials/venders/hover.css" class="rel">
     <link rel="stylesheet" href="/template/blog.html" class="rel">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -16,10 +17,10 @@
 <!--////////// Nav bar /////////////-->
     <div class="collapse navbar-collapse" id=bs-example-collapse-navbar1>
         <ul>
-            <li><a href="#home">Home</li></a>
+            <li><a href="index.html">Home</li></a>
                 <li><a href="template/about.html">About</a></li>
                 <li><a href="template/portfolio.html">Portfolio</a></li>
-                <li><a href="template/blog.html">Blog</a></li>
+                <!-- <li><a href="template/blog.html">Blog</a></li> -->
                 <li><a href="#contact">Contact</a></li>
                     <!-- <ul class="social-icons"> -->
                     <li>
@@ -40,7 +41,7 @@
     <!-- <h1 class="title">Hey, my name is Kristen Leake</h1>
     <p>I build websites & apps</p> -->
     <section id="thumbnails">
-        <div class="container-fluid">
+        <div class="container-fluid center">
             <!-- /////// THUMBNAILS ////// -->
             <div class="row">
                 <div class="col-xs-6 col-md-3">
@@ -57,13 +58,13 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-3">
+                <!-- <div class="col-xs-6 col-md-3">
                     <a href="template/blog.html">
                         <div class="button hvr-float-shadow">
                             <img src="img/blog.png" alt="Journal" class="img-responsive" width="387" height="275">
                         </div>
                     </a>
-                </div>
+                </div> -->
                 <div class="col-xs-6 col-md-3">
                     <a href="https://github.com/KristenLeake">
                         <div class="button hvr-float-shadow">
